move image overlay config to new tab

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 <style>
-#nav-camera-tab, #nav-image-tab, #nav-processing-tab, #nav-location-tab, #nav-admin-tab, #nav-filetransfer-tab, #nav-s3-tab, #nav-syncapi-tab, #nav-youtube-tab, #nav-mqtt-tab, #nav-devices-tab, #nav-sensors-tab, #nav-adsb-tab, #nav-sat_track-tab, #nav-timelapse-tab {
+#nav-camera-tab, #nav-image-tab, #nav-processing-tab, #nav-location-tab, #nav-admin-tab, #nav-filetransfer-tab, #nav-s3-tab, #nav-syncapi-tab, #nav-youtube-tab, #nav-mqtt-tab, #nav-devices-tab, #nav-sensors-tab, #nav-adsb-tab, #nav-sat_track-tab, #nav-timelapse-tab, #nav-overlays-tab {
 	width: 150px;
 	margin-top: 10px;
 	margin-right: 5px;
@@ -39,6 +39,7 @@ var camera_id = {{ camera_id }};
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link link-danger bg-dark active" id="nav-camera-tab" data-bs-toggle="tab" data-bs-target="#nav-camera" type="button" role="tab" aria-controls="nav-camera" aria-selected="true">Camera</button>
     <button class="nav-link link-light bg-dark" id="nav-image-tab" data-bs-toggle="tab" data-bs-target="#nav-image" type="button" role="tab" aria-controls="nav-image" aria-selected="false">Image</button>
+    <button class="nav-link link-secondary bg-dark" id="nav-overlays-tab" data-bs-toggle="tab" data-bs-target="#nav-overlays" type="button" role="tab" aria-controls="nav-overlays" aria-selected="false">Overlays</button>
     <button class="nav-link link-primary bg-dark" id="nav-timelapse-tab" data-bs-toggle="tab" data-bs-target="#nav-timelapse" type="button" role="tab" aria-controls="nav-timelapse" aria-selected="false">Timelapse</button>
     <button class="nav-link link-success bg-dark" id="nav-processing-tab" data-bs-toggle="tab" data-bs-target="#nav-processing" type="button" role="tab" aria-controls="nav-processing" aria-selected="false">Processing</button>
     <button class="nav-link link-info bg-dark" id="nav-location-tab" data-bs-toggle="tab" data-bs-target="#nav-location" type="button" role="tab" aria-controls="nav-location" aria-selected="false">Location</button>
@@ -1307,6 +1308,162 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_EXPORT_RAW.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_EXPORT_RAW(class='form-select bg-secondary') }}
+            <div id="IMAGE_EXPORT_RAW-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Enable saving raw (non-stacked) images</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_EXPORT_FOLDER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.IMAGE_EXPORT_FOLDER(class='form-control bg-secondary') }}
+            <div id="IMAGE_EXPORT_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">Folder to save raw exported images</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_EXPORT_FLIP_V.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_EXPORT_FLIP_V(class='form-check-input') }}
+                <div id="IMAGE_EXPORT_FLIP_V-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_EXPORT_FLIP_H.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_EXPORT_FLIP_H(class='form-check-input') }}
+                <div id="IMAGE_EXPORT_FLIP_H-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_FITS.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_SAVE_FITS(class='form-check-input') }}
+                <div id="IMAGE_SAVE_FITS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Enable saving raw FITS (non-stacked) data</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_FITS_PRE_DARK.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_SAVE_FITS_PRE_DARK(class='form-check-input') }}
+                <div id="IMAGE_SAVE_FITS_PRE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Save FITS files before subtracting dark calibration</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__0__KEY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__0__KEY(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__0__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FITSHEADERS__0__VAL(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__0__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__1__KEY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__1__KEY(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__1__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FITSHEADERS__1__VAL(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__1__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__2__KEY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__2__KEY(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__2__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FITSHEADERS__2__VAL(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__2__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__3__KEY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__3__KEY(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__3__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FITSHEADERS__3__VAL(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__3__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__4__KEY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FITSHEADERS__4__KEY(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__4__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FITSHEADERS__4__VAL(class='form-control bg-secondary') }}
+            <div id="FITSHEADERS__4__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+
+</div><!-- end image tab -->
+<div class="tab-pane fade" id="nav-overlays" role="tabpanel" aria-labelledby="nav-overlays-tab">
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_LABEL_SYSTEM.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -1828,160 +1985,8 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">Color of Moon Orb</div>
     </div>
 
-    <hr>
 
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_EXPORT_RAW.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_EXPORT_RAW(class='form-select bg-secondary') }}
-            <div id="IMAGE_EXPORT_RAW-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-8">Enable saving raw (non-stacked) images</div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_EXPORT_FOLDER.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-5">
-            {{ form_config.IMAGE_EXPORT_FOLDER(class='form-control bg-secondary') }}
-            <div id="IMAGE_EXPORT_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-5">Folder to save raw exported images</div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_EXPORT_FLIP_V.label }}
-        </div>
-        <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_EXPORT_FLIP_V(class='form-check-input') }}
-                <div id="IMAGE_EXPORT_FLIP_V-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
-        </div>
-        <div class="col-sm-8"></div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_EXPORT_FLIP_H.label }}
-        </div>
-        <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_EXPORT_FLIP_H(class='form-check-input') }}
-                <div id="IMAGE_EXPORT_FLIP_H-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
-        </div>
-        <div class="col-sm-8"></div>
-    </div>
-
-    <hr>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_FITS.label }}
-        </div>
-        <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_SAVE_FITS(class='form-check-input') }}
-                <div id="IMAGE_SAVE_FITS-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
-        </div>
-        <div class="col-sm-8">Enable saving raw FITS (non-stacked) data</div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_FITS_PRE_DARK.label }}
-        </div>
-        <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_SAVE_FITS_PRE_DARK(class='form-check-input') }}
-                <div id="IMAGE_SAVE_FITS_PRE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
-        </div>
-        <div class="col-sm-8">Save FITS files before subtracting dark calibration</div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__0__KEY.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__0__KEY(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__0__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-4">
-            {{ form_config.FITSHEADERS__0__VAL(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__0__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__1__KEY.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__1__KEY(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__1__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-4">
-            {{ form_config.FITSHEADERS__1__VAL(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__1__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__2__KEY.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__2__KEY(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__2__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-4">
-            {{ form_config.FITSHEADERS__2__VAL(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__2__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__3__KEY.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__3__KEY(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__3__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-4">
-            {{ form_config.FITSHEADERS__3__VAL(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__3__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__4__KEY.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.FITSHEADERS__4__KEY(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__4__KEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-4">
-            {{ form_config.FITSHEADERS__4__VAL(class='form-control bg-secondary') }}
-            <div id="FITSHEADERS__4__VAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
-</div><!-- end image tab -->
+</div><!-- end overlays tab -->
 <div class="tab-pane fade" id="nav-timelapse" role="tabpanel" aria-labelledby="nav-timelapse-tab">
 
     <hr>
