--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -89,6 +89,12 @@
                                 <a href="{{ url_for('indi_allsky.panorama_loop_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/repeat.svg') }}" width="16" height="16" alt="Panorama Loop"><span class="ms-1 d-none d-sm-inline">Panorama Loop</span></a>
                             </li>
+                            {% if current_user.is_authenticated or login_disabled %}
+                            <li>
+                                <a href="{{ url_for('indi_allsky.fitsimageviewer_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/image-fill.svg') }}" width="16" height="16" alt="FITS Viewer"><span class="ms-1 d-none d-sm-inline">FITS</span></a>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
 
