--- a/indi_allsky/flask/templates/fitsimageviewer.html
+++ b/indi_allsky/flask/templates/fitsimageviewer.html
@@ -515,7 +515,7 @@ function init() {
                         'download' : '',
                     }).html(
                         $('<span />', {
-                            'text'  : 'FITS',
+                            'text'  : 'Download',
                             'class' : "badge pill bg-danger",
                         })
                     )
