show last dew point calculation if available

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5483,6 +5483,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>Manual target temperature if dew point calculations are not available.  0 = disabled</div>
+            <div>Last dew point measurement: <b>{{ dew_point_str }}</b></div>
         </div>
     </div>
 
